fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,7 +556,6 @@ section {
   border-radius: 50%;
   background-color:rgb(255, 235, 130, 0.5);
   text-align: center;
-  overflow-wrap: break-word;
 }
 
 .card-img-overlay>h5, 
